# serializer version: 1
# name: TestOpenborGenerator.test_generate
  tuple(
    list([
      'OpenBOR7530',
      '/userdata/roms/openbor/rom.pak',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenborGenerator.test_generate[config]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_config[{'openbor_filter': '1'}]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=1
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_config[{'openbor_limit': '1'}]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=1
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_config[{'openbor_ratio': '1'}]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=1
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_config[{'openbor_rumble': '1'}]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=1
  joyrumble.1=1
  joyrumble.2=1
  joyrumble.3=1
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_config[{'openbor_vsync': '0'}]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=0
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_controllers[openbor4432]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=614
  keys.0.1=615
  keys.0.2=616
  keys.0.3=617
  keys.0.4=601
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=602
  keys.0.9=604
  keys.0.10=610
  keys.0.11=621
  keys.0.12=611
  keys.0.13=618
  keys.0.14=619
  keys.0.15=616
  keys.0.16=617
  keys.1.0=600
  keys.1.1=600
  keys.1.2=600
  keys.1.3=600
  keys.1.4=600
  keys.1.5=600
  keys.1.6=600
  keys.1.7=600
  keys.1.8=600
  keys.1.9=600
  keys.1.10=600
  keys.1.11=0
  keys.1.12=0
  keys.1.13=0
  keys.1.14=0
  keys.1.15=0
  keys.1.16=0
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_controllers[openbor7142]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=614
  keys.0.1=615
  keys.0.2=616
  keys.0.3=617
  keys.0.4=601
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=602
  keys.0.9=604
  keys.0.10=610
  keys.0.11=621
  keys.0.12=611
  keys.0.13=618
  keys.0.14=619
  keys.0.15=616
  keys.0.16=617
  keys.1.0=600
  keys.1.1=600
  keys.1.2=600
  keys.1.3=600
  keys.1.4=600
  keys.1.5=600
  keys.1.6=600
  keys.1.7=600
  keys.1.8=600
  keys.1.9=600
  keys.1.10=600
  keys.1.11=0
  keys.1.12=0
  keys.1.13=0
  keys.1.14=0
  keys.1.15=0
  keys.1.16=0
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_controllers[openbor7530]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=614
  keys.0.1=615
  keys.0.2=616
  keys.0.3=617
  keys.0.4=601
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=602
  keys.0.9=604
  keys.0.10=610
  keys.0.11=621
  keys.0.12=611
  keys.0.13=618
  keys.0.14=619
  keys.0.15=616
  keys.0.16=617
  keys.1.0=600
  keys.1.1=600
  keys.1.2=600
  keys.1.3=600
  keys.1.4=600
  keys.1.5=600
  keys.1.6=600
  keys.1.7=600
  keys.1.8=600
  keys.1.9=600
  keys.1.10=600
  keys.1.11=0
  keys.1.12=0
  keys.1.13=0
  keys.1.14=0
  keys.1.15=0
  keys.1.16=0
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_forced_core[openbor4432]
  tuple(
    list([
      'OpenBOR4432',
      '/userdata/roms/openbor/rom.pak',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenborGenerator.test_generate_forced_core[openbor4432][config4432.ini]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_forced_core[openbor6412]
  tuple(
    list([
      'OpenBOR6412',
      '/userdata/roms/openbor/rom.pak',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenborGenerator.test_generate_forced_core[openbor6412][config6412.ini]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_forced_core[openbor7142]
  tuple(
    list([
      'OpenBOR7142',
      '/userdata/roms/openbor/rom.pak',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenborGenerator.test_generate_forced_core[openbor7142][config7142.ini]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=614
  keys.0.1=615
  keys.0.2=616
  keys.0.3=617
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=632
  keys.0.14=633
  keys.0.15=630
  keys.0.16=631
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_forced_core[openbor7530]
  tuple(
    list([
      'OpenBOR7530',
      '/userdata/roms/openbor/rom.pak',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenborGenerator.test_generate_forced_core[openbor7530][config7530.ini]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_forced_core[unknown]
  tuple(
    list([
      'OpenBOR7530',
      '/userdata/roms/openbor/rom.pak',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenborGenerator.test_generate_forced_core[unknown][config7530.ini]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_guessed_core[rom[5438]-4432]
  tuple(
    list([
      'OpenBOR4432',
      '/userdata/roms/openbor/rom[5438].pak',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenborGenerator.test_generate_guessed_core[rom[5438]-4432][config4432.ini]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_guessed_core[rom[6000]-6412]
  tuple(
    list([
      'OpenBOR6412',
      '/userdata/roms/openbor/rom[6000].pak',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenborGenerator.test_generate_guessed_core[rom[6000]-6412][config6412.ini]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_guessed_core[rom[6500]-7142]
  tuple(
    list([
      'OpenBOR7142',
      '/userdata/roms/openbor/rom[6500].pak',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenborGenerator.test_generate_guessed_core[rom[6500]-7142][config7142.ini]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=614
  keys.0.1=615
  keys.0.2=616
  keys.0.3=617
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=632
  keys.0.14=633
  keys.0.15=630
  keys.0.16=631
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_generate_guessed_core[rom[7530]-7530]
  tuple(
    list([
      'OpenBOR7530',
      '/userdata/roms/openbor/rom[7530].pak',
    ]),
    dict({
    }),
  )
# ---
# name: TestOpenborGenerator.test_generate_guessed_core[rom[7530]-7530][config7530.ini]
  '''
  fullscreen=1
  usegl=1
  usejoy=1
  stretch=0
  swfilter=0
  vsync=1
  fpslimit=0
  keys.0.0=622
  keys.0.1=624
  keys.0.2=625
  keys.0.3=623
  keys.0.4=602
  keys.0.5=603
  keys.0.6=605
  keys.0.7=606
  keys.0.8=601
  keys.0.9=604
  keys.0.10=610
  keys.0.11=607
  keys.0.12=609
  keys.0.13=616
  keys.0.14=617
  keys.0.15=614
  keys.0.16=615
  joyrumble.0=0
  joyrumble.1=0
  joyrumble.2=0
  joyrumble.3=0
  
  '''
# ---
# name: TestOpenborGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
    }),
    'name': 'openbor',
  })
# ---
